--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -276,18 +276,25 @@ $blockquote-line-height-phone: 1.5625rem !default;
 /* 23. List
    ========================================================================== */
 $list-margin: 8px 16px !default;
+$list-background: darken($white, 5%);
 
 $list-header-color: $primary-color !default;
+$list-header-background: $white;
 $list-header-font-size: .8125rem !default;
 $list-header-font-weight: normal !default;
 $list-header-height: 48px !default;
 $list-header-line-height: 48px !default;
 
 $list-item-color: #484848 !default;
+$list-item-background: #fff;
 $list-item-height: 48px !default;
 $list-item-line-height: 48px !default;
 $list-item-font-size: 1rem !default;
+$list-item-padding: 8px 16px;
+$list-item-active-background: darken(#fff, 1%);
+$list-item-active-shadow: 4px 0px 6px -3px rgba(167,167,167,0.3);
 
 $list-item-tl-sl-font-size: .875rem !default;
 $list-item-tl-height: 72px !default;
 $list-item-tl-sl-color: #757575 !default;
+/* Rectangle: */
