--- a/src/themes/material/modules/_list.scss
+++ b/src/themes/material/modules/_list.scss
@@ -1,30 +1,21 @@
-.list {
-    padding: 0;
-    margin: $list-margin;
-    &__header {
-        color: $list-header-color;
-        font-size: $list-header-font-size;
-        font-weight: $list-header-font-weight;
-        height: $list-header-height;
-        line-height: $list-header-line-height;
+@include b(ig-list) {
+    @extend %ig-list;
+    
+    @include e(header) {
+        @extend %ig-list-header;
     }
-    &__item {
-        position: relative;
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: center;
-        color: $list-item-color;
-        list-style-type: none;
-        font-size: $list-item-font-size;
+
+    @include e(item) {
+        @extend %ig-list-item;
+        &:active {
+            @extend %ig-list-item--active;
+        }
     }
-    &__item--single-line {
-        height: $list-item-height;
-    }
-    &__item--two-line {
-        height: $list-item-tl-height;
-        :nth-child(n+2) {
-            color: $list-item-tl-sl-color;
-            font-size: $list-item-tl-sl-font-size;
+
+    // style the wrapping component elements
+    @at-root {
+        ig-list-item {
+            @extend %ig-list-item-display;
         }
     }
 }
