-added a switch module -moved the styles for checkbox, radio, and switch controls to placeholder selectors -temporarily disabled normalize.scss

--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -144,7 +144,7 @@ $button-floating-background: $primary-color;
 
 /* 9. Fonts
    ========================================================================== */
-$titillium-font-path: '../fonts/titillium/' !default;
+$titillium-font-path: '../dist/fonts/titillium/' !default;
 
 /* 10. Forms
    ========================================================================== */
