--- a/src/themes/material/modules/_index.scss
+++ b/src/themes/material/modules/_index.scss
@@ -1,10 +1,8 @@
-@import 'buttons';
-@import 'checkboxes';
-@import 'inputs';
-@import 'list';
-@import 'material_icons';
-@import 'radio';
-@import 'switch';
 @import 'titillium';
 @import 'typography';
+@import 'material_icons';
+@import 'buttons';
+@import 'inputs';
+@import 'controls';
+@import 'list';
 @import 'tab';
