-improved button module functionality

--- a/src/themes/material/modules/_buttons.scss
+++ b/src/themes/material/modules/_buttons.scss
@@ -64,6 +64,6 @@
   &--disabled {
     color: $button-disabled-color;
     background: $button-disabled-background;
-    cursor: default;
+    pointer-events: none;
   }
 }
