-partially use the form-group styles for individual input elements

--- a/src/themes/material/modules/_inputs.scss
+++ b/src/themes/material/modules/_inputs.scss
@@ -1,71 +1,80 @@
-@include b(ig-form-group) {
+// @include b(ig-form-group) {
+// 	@extend %ig-input-display;
+
+// 	@include e(label) {
+// 		@extend %ig-form-label;
+// 	}
+
+// 	@include e(input) {
+// 		@extend %ig-form-input;
+// 		&:focus {
+// 			@extend %ig-form-input--focused;
+// 		}
+// 		&:disabled {
+// 			@extend %ig-form-input--disabled;
+// 		}
+// 		&.ng-valid[required],
+// 		&.ng-valid.required  {
+// 			@extend %ig-form-input--success;
+// 			~ label {
+// 				@extend %ig-form-label--success;
+// 			}
+// 		}
+// 		&.ng-invalid.ng-touched,
+// 		&.ng-invalid:not(form).ng-touched {
+// 			@extend %ig-form-input--error;
+// 			~ label {
+// 				@extend %ig-form-label--error;
+// 			}
+// 		}
+// 		&.ng-warning {
+// 			@extend %ig-form-input--warn;
+// 			~ label {
+// 				@extend %ig-form-label--warn;
+// 			}
+// 		}
+// 	}
+
+// 	@include e(textarea) {
+// 		@extend .ig-form-group__input;
+// 		@extend %ig-textarea;
+// 	}
+
+// 	@include m(placeholder) {
+// 		@include e(label) {
+// 			@extend %ig-form-label--float;
+// 		}
+// 	}
+
+// 	@include m(filled) {
+// 		@extend %ig-input-display;
+
+// 		@include e(label) {
+// 			@extend %ig-form-label;
+// 			@extend %ig-form-label--filled;
+// 			@extend %ig-form-label--float;
+// 		}
+		
+// 		@include e(input) {
+// 			@extend %ig-form-input;
+// 		}
+// 	}
+
+// 	@include m(focused) {
+// 		@extend %ig-input-display;
+
+// 		@include e(label) {
+// 			@extend %ig-form-label;
+// 			@extend %ig-form-label--focused;
+// 		}
+// 	}
+// }
+
+@include b(ig-input) {
 	@extend %ig-input-display;
 
-	@include e(label) {
-		@extend %ig-form-label;
-	}
-
-	@include e(input) {
-		@extend %ig-form-input;
-		&:focus {
-			@extend %ig-form-input--focused;
-		}
-		&:disabled {
-			@extend %ig-form-input--disabled;
-		}
-		&.ng-valid[required],
-		&.ng-valid.required  {
-			@extend %ig-form-input--success;
-			~ label {
-				@extend %ig-form-label--success;
-			}
-		}
-		&.ng-invalid.ng-touched,
-		&.ng-invalid:not(form).ng-touched {
-			@extend %ig-form-input--error;
-			~ label {
-				@extend %ig-form-label--error;
-			}
-		}
-		&.ng-warning {
-			@extend %ig-form-input--warn;
-			~ label {
-				@extend %ig-form-label--warn;
-			}
-		}
-	}
-
-	@include e(textarea) {
-		@extend .ig-form-group__input;
-		@extend %ig-textarea;
-	}
-
-	@include m(placeholder) {
-		@include e(label) {
-			@extend %ig-form-label--float;
-		}
-	}
-
 	@include m(filled) {
-		@extend %ig-input-display;
-
-		@include e(label) {
-			@extend %ig-form-label;
-			@extend %ig-form-label--filled;
-			@extend %ig-form-label--float;
-		}
-		
-		@include e(input) {
-			@extend %ig-form-input;
-		}
-	}
-
-	@include m(focused) {
-		@extend %ig-input-display;
-
-		@include e(label) {
-			@extend %ig-form-label;
-			@extend %ig-form-label--focused;
-		}
+		@extend %ig-form-input;
+		// @extend %ig-input-display;
 	}
 }
