-added label to switch control -created placeholder stylesheet for the avatar control

--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -197,7 +197,7 @@ $switch-label-width: 20px !default;
 $switch-label-height: $switch-label-width !default;
 $switch-shadow: 0 2px 4px 0 rgba(72, 72, 72, 0.50);
 $switch-disabled-shadow: 0 1px 2px 0 rgba(72, 72, 72, 0.50) !default;
-$switch-margin: 20px 0 !default;
+$switch-margin: 0 16px !default;
 
 // Checkboxes
 $checkbox-width: 20px !default;
