--- a/src/themes/material/extends/_switch.scss
+++ b/src/themes/material/extends/_switch.scss
@@ -1,5 +1,5 @@
 %switch-lbl-display {
-    display: block;
+    display: inline-block;
     position: relative;
     margin: $switch-margin;
     width: $switch-width;
