Nav Drawer initial tests commit Further demo cleanup Updating npm commands preventing coverage on spec files

--- a/demos/app/navigation-drawer/sample.css
+++ b/demos/app/navigation-drawer/sample.css
@@ -1,9 +1,5 @@
 
 /* sample styling */
-.sample-content {
-    padding-left:60px;
-}
-
 #log {
     height:400px;
     background-color:#e3e3e3;
@@ -61,3 +57,9 @@ pin-sample {
     pin-sample .sample-content.pin.full {
         padding-left:0px;
     }
+
+/* Mini sample */
+mini-sample {
+    display: block;
+    padding-left:60px;
+}
