-added avatar pseudo selectors -removed compiled css files from dist folder

--- a/src/themes/material/modules/_avatar.scss
+++ b/src/themes/material/modules/_avatar.scss
@@ -1,6 +1,8 @@
 @include b(ig-avatar){
-    
-    @include m(rounded) {
+    @extend %avatar-display;
 
+    @include m(rounded) {
+        @extend %avatar-display;
+        @extend %avatar--rounded;
     }
 }
