--- a/src/themes/utilities/_mixins.scss
+++ b/src/themes/utilities/_mixins.scss
@@ -9,3 +9,16 @@
   overflow: hidden;
   pointer-events: none;
 }
+
+
+@mixin linear-gradient($direction, $color-stops...) {
+  // Direction has been omitted and happens to be a color-stop
+  @if is-direction($direction) == false {
+    $color-stops: $direction, $color-stops;
+    $direction: 180deg;
+  }
+
+  background: nth(nth($color-stops, 1), 1);
+  background: -webkit-linear-gradient(legacy-direction($direction), $color-stops);
+  background: linear-gradient($direction, $color-stops);
+}
