--- a/src/themes/material/modules/_tab.scss
+++ b/src/themes/material/modules/_tab.scss
@@ -1,137 +1,3 @@
-$badge-background-color: #dd524d;
-$tab-bar-background: #fff;
-
-ig-tab-bar {
-    display: block;
-    .ig-tab-bar-inner {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        &__menu {
-            position: absolute;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 100%;
-            height: 56px;
-            margin: 0;
-            padding: 0;
-            background: $tab-bar-background; //experimental
-            color: set-color($tab-bar-background); //experimental
-            overflow: hidden;
-        }
-        &__menu-item {
-            display: flex;
-            position: relative;
-            flex-flow: column wrap;
-            align-items: center;
-            min-width: 80px;
-            max-width: 168px;
-            list-style: none;
-            text-align: center;
-            cursor: pointer;
-            text-transform: uppercase;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        }
-        .tab-color {
-            display: table;
-            position: absolute;
-            width: 100%;
-            height: 56px;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            &:after {
-                top: 50%;
-                left: 50%;
-                content: '';
-                transform: translateY(-50%);
-                width: 25px;
-                height: 25px;
-                margin-top: -25px;
-                margin-left: 0;
-                border-radius: 50%;
-                transform: scale(0);
-                position:absolute;
-            }
-            // experimental
-            &--1:after {
-                background: #0e7a6c;
-            }
-            &--2:after {
-                background: #475b64;
-            }
-            &--3:after {
-                background: #6e4a45;
-            }
-            &--4:after {
-                background: #9c736f;
-            }
-        }
-        .tab-icon {
-            position: relative;
-            height: 24px;
-            z-index: 1;
-            opacity: .75;
-            &__badge {
-                display: flex;
-                position: absolute;
-                justify-content: center;
-                align-items: center;
-                min-width: 14px;
-                height: 14px;
-                line-height: 16px;
-                color: #fff;
-                background-color: $badge-background-color;
-                margin-right: -25%;
-                font-size: 12px;                  
-                top: 0;                    
-                right: 0;
-                border-radius: 50% 50%;
-                padding: 2px;
-                box-shadow: 0px 1px 2px 0px rgba(72, 72, 72, 0.50);
-                &--hidden {
-                    display: none;
-                }
-            }
-        }
-        .tab-label {
-            max-width: 168px;
-            padding-top: 5px;
-            font-size: 12px;
-            line-height: 12px;
-            text-transform: uppercase;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            z-index: 1;
-            opacity: .75;
-        }
-        &__menu-item--selected {
-            .tab-icon,
-            .tab-label {
-                opacity: 1;
-                transition: all .25s ease-in;
-            }
-            .tab-color:after {
-                animation: selected .8s ease forwards;
-            }
-        }
-        &__menu-item--disabled {
-            opacity: 0.5;
-            cursor: default;
-        }
-        &__menu--top {
-            top: 0;
-            box-shadow: 0px 2px 4px 0px rgba(72, 72, 72, 0.10);
-        }
-        &__menu--bottom {
-            box-shadow: 0px -2px 4px 0px rgba(72, 72, 72, 0.10);
-        }
-    }
-}
-
 ig-tab {
     .ig-tab-inner {
         display: none;
@@ -141,6 +7,49 @@ ig-tab {
         }
         &::-webkit-scrollbar { 
             display: none;
+        }
+    }
+}
+
+@include b(ig-tab-bar-inner) {
+    @extend %tabbar-inner-display;
+
+    @include b(tab-icon) {
+        @extend %tab-icon;
+    }
+
+    @include b(tab-label) {
+        @extend %tab-label;
+    }
+
+    @include e(menu) {
+        @extend %tabbar-menu;
+
+        @include e(item, true) {
+            @extend %tabbar-menu-item;
+
+            @include m(selected) {
+
+                @include b(tab-icon) {
+                    @extend %tab-icon--selected;
+                }
+
+                @include b(tab-label) {
+                    @extend %tab-label--selected;
+                }
+            }
+
+            @include m(disabled) {
+                @extend %tabbar-menu-item--disabled;
+            }
+        }
+
+        @include m(top) {
+            @extend %tabbar-menu--top;
+        }
+
+        @include m(bottom) {
+            @extend %tabbar-menu--bottom;
         }
     }
 }
