--- a/src/themes/material/modules/_avatar.scss
+++ b/src/themes/material/modules/_avatar.scss
@@ -5,4 +5,29 @@
         @extend %avatar-display;
         @extend %avatar--rounded;
     }
+
+    @include m(small) {
+        @extend %avatar-display;
+        @extend %avatar--small;
+    }
+
+    @include m(medium) {
+        @extend %avatar-display;
+        @extend %avatar--medium;
+    }
+
+    @include m(large) {
+        @extend %avatar-display;
+        @extend %avatar--large;
+    }
+
+    @include m(icon) {
+        @extend %avatar-display;
+        @extend %avatar--icon;
+    }
+
+    @include m(image) {
+        @extend %avatar-display;
+        @extend %avatar--image; 
+    }
 }
