--- a/src/carousel/carousel.scss
+++ b/src/carousel/carousel.scss
@@ -1,6 +1,7 @@
 .ig-carousel {
     position: relative;
     transform-style: preserve-3d;
+    outline: none;
 }
 
 .ig-carousel-indicators {
@@ -8,9 +9,10 @@
     text-align: center;
     list-style: none;
     z-index: 10;
-    left: 25%;
-    right: 25%;
-    bottom: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 10px;
+    padding: 0;
 
     li {
         display: inline-block;
@@ -36,6 +38,7 @@
 .ig-carousel-inner {
     position: relative;
     width: 100%;
+    height: 250px;
     overflow: hidden;
 
     .item {
@@ -48,7 +51,7 @@
         backface-visibility: hidden;
         -webkit-perspective: 1000px;
         perspective: 1000px;
-
+        
         .next,
         .prev,
         .next.left,
@@ -57,6 +60,10 @@
         .active.left, {
             left: 0;
             transform: translate3d(100%, 0, 0);
+        }
+        img {
+            width: 100%;
+            height: 100%;
         }
     }
 
