--- a/src/themes/material/extends/_inputs.scss
+++ b/src/themes/material/extends/_inputs.scss
@@ -95,7 +95,7 @@
 }
 
 %ig-search-input {
-    padding: 12px 0;
+    padding: 12px;
     border-bottom: none;
     box-shadow: 0px 1px 4px 0px rgba(152,152,152,0.50);
 }
