(improvement) the button component is now a directive

--- a/src/themes/material/extends/_buttons.scss
+++ b/src/themes/material/extends/_buttons.scss
@@ -12,6 +12,7 @@
     text-transform: uppercase;
     cursor: pointer;
     user-select: none;
+    outline: none;
     -webkit-tap-highlight-color: transparent;
     transition: $button-transition;
 }
