--- a/src/themes/material/modules/_buttons.scss
+++ b/src/themes/material/modules/_buttons.scss
@@ -21,8 +21,12 @@
     @extend %button-fab;
   }
 
+
+  @include m(icon){
+    @extend %button-icon;
+  }
+
   @include m(disabled) {
-    @extend %button-display;
     @extend %button-disabled;
   }
 }
