--- a/src/themes/material/extends/_ripple.scss
+++ b/src/themes/material/extends/_ripple.scss
@@ -1,27 +1,34 @@
-%ig-ripple {
-    display: block;
+%ig-ripple-display {
+    display: inline-block;
     position: absolute;
+    will-change: opacity, transform;
+    width: 0;
+    height: 0;
     top: 0;
+    right: 0;
     bottom: 0;
     left: 0;
-    right: 0;
-    border-radius: inherit;
-    border-radius: 100%;
-    background: currentColor;
-    opacity: 0.2;
+    border-radius: 50% 50%;
+    background: rgba(0, 0, 0, 0.2);
+    opacity: 1;
     transform: scale(0);
-    transition: transform 0.4s ease-out, opacity 0.4s ease-out;
     pointer-events: none;
-    user-select: none;
-     -webkit-mask-image: -webkit-radial-gradient(circle, white, black);
+    overflow: inherit;
 }
 
-%ig-ripple-held {
-    opacity: 0.4;
-    -webkit-transform: scale(1);
-    transform: scale(1);
+%ig-ripple-wrapper {
+    position: relative;
+    overflow: hidden;
 }
 
-%ig-ripple-done {
-    opacity: 0.0;
+%ig-ripple-animation {
+    animation: rippleDrop 1s cubic-bezier(0.25, 0.8, 0.25, 1);
+    z-index: 1;
+}
+
+@keyframes rippleDrop {
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
 }
