(improvement) button background and color can now be set on igButton (improvement) fab button box shadow (improvement) ripple effect opacity adjustments

--- a/src/themes/material/extends/_buttons.scss
+++ b/src/themes/material/extends/_buttons.scss
@@ -114,9 +114,9 @@
 }
 
 %button-disabled {
-    color: $button-disabled-color;
-    background: $button-disabled-background;
-    pointer-events: none; 
-    box-shadow: $button-disabled-shadow;
-    opacity: 0.9;
+    color: $button-disabled-color !important;
+    background: $button-disabled-background !important;
+    pointer-events: none !important; 
+    box-shadow: $button-disabled-shadow !important;
+    opacity: 0.9 !important;
 }
