--- a/src/themes/material/extends/_ripple.scss
+++ b/src/themes/material/extends/_ripple.scss
@@ -9,8 +9,8 @@
     bottom: 0;
     left: 0;
     border-radius: 50% 50%;
-    background: rgba(0, 0, 0, 0.2);
-    opacity: 1;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: .8;
     transform: scale(0);
     pointer-events: none;
     overflow: inherit;
