--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -119,7 +119,7 @@ $button-font-weight: normal !default;
 $button-width: em(88px) !default;
 $button-height: em(36px) !default;
 $button-padding: em(6px) em(16px) !default;
-$button-transition: all 0.2s ease !default;
+$button-transition: all 0.05§s ease-out !default;
 
 // Disabled Styles
 $button-disabled-background: #F0F0F0 !default;
@@ -151,8 +151,8 @@ $button-flat-focus-background: #D1D1D1 !default;
 // Floating Buttons
 $button-floating-width: em(56px);
 $button-floating-height: $button-floating-width;
-$button-floating-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.3);
-$button-floating-hover-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.3);
+$button-floating-shadow: 0px 3px 6px 2px rgba(0, 0, 0, 0.3);
+$button-floating-hover-shadow: 0px 6px 12px 2px rgba(0, 0, 0, 0.3);
 $button-floating-radius: 50%;
 $button-floating-background: $primary-color;
 
@@ -314,3 +314,8 @@ $list-item-tl-sl-font-size: em(14px) !default;
 $list-item-tl-height: em(72px) !default;
 $list-item-tl-sl-color: #757575 !default;
 /* Rectangle: */
+
+/* 24. Elevation
+   ========================================================================== */
+
+$elevate-1: 0 1px 2px 0 rgba(0, 0, 0, 0.3) !default;
