--- a/src/themes/material/extends/_buttons.scss
+++ b/src/themes/material/extends/_buttons.scss
@@ -15,8 +15,10 @@
     user-select: none;
     outline: none;
     -webkit-tap-highlight-color: transparent;
-    transition: $button-transition;
     overflow: hidden;
+    &:hover {
+        transition: $button-transition;
+    }
 }
 
 %button-flat {
@@ -101,12 +103,12 @@
     outline: none;
     border: none;
     background: transparent;
-    transition: $button-transition;
     user-select: none;
     -webkit-tap-highlight-color: transparent;
     // another hack to allow circular overflow in chrome ...
     -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%);
     &:hover {
+        transition: $button-transition;
         background: $button-flat-hover-background;
     }
     &:focus,
