--- a/src/themes/material/extends/_inputs.scss
+++ b/src/themes/material/extends/_inputs.scss
@@ -97,5 +97,5 @@
 %ig-search-input {
     padding: 12px;
     border-bottom: none;
-    box-shadow: 0px 1px 4px 0px rgba(152,152,152,0.50);
+    box-shadow: $elevate-2;
 }
