--- a/src/themes/material/extends/_tab.scss
+++ b/src/themes/material/extends/_tab.scss
@@ -9,7 +9,7 @@
 }
 
 %tabbar-menu {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -24,11 +24,12 @@
 
 %tabbar-menu--top {
     top: 0;
-    box-shadow: 0px 2px 4px 0px rgba(72, 72, 72, 0.10);
+    box-shadow: $elevate-8;
 }
 
 %tabbar-menu--bottom {
-    box-shadow: 0px -2px 4px 0px rgba(72, 72, 72, 0.10);
+    bottom: 0;
+    box-shadow: $elevate-8-up;
 }
 
 %tabbar-menu-item {
@@ -36,8 +37,10 @@
     position: relative;
     flex-flow: column wrap;
     align-items: center;
+    justify-content: center;
     min-width: 80px;
-    max-width: 168px;
+    flex-grow: 1;
+    height: 100%;
     list-style: none;
     text-align: center;
     cursor: pointer;
@@ -45,6 +48,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     user-select: none;
+    overflow: hidden;
 }
 
 %tabbar-menu-item--disabled {
