--- a/src/themes/utilities/_functions.scss
+++ b/src/themes/utilities/_functions.scss
@@ -108,19 +108,22 @@
 }
 
 @function elevation($dp: 0) {
+    $box-shadow: none;
+    
+    $blur: if($dp == 1, 3, $dp * 2);
+    
     $ambientY: $dp;
     $ambientAlpha: ($dp + 10 + ($dp / 9.38)) / 100;
-    $ambientBlur: if($dp==1, 3, $dp * 2);
-    $directY: (if($dp < 10, if($dp % 2==0, $dp - (($dp / 2) - 1), ($dp - (($dp - 1)/ 2))), $dp - 4));
-    $directBlur: $ambientBlur;
+    
+    $directY: if($dp < 10, floor($dp / 2) + 1, $dp - 4);
     $directAlpha: (24 - round($dp / 10)) / 100;
-    $box-shadow: none;
-    @if $dp==0 {
-        @return $box-shadow;
-    }
-    @else {
-        $box-shadow: #{'0 #{$ambientY}px #{$ambientBlur}px rgba(0, 0, 0, #{$ambientAlpha})'}, 
-        #{'0 #{$directY}px #{$directBlur}px rgba(0, 0, 0, #{$directAlpha})'};
-        @return $box-shadow;
+    
+
+    @if $dp == 0 {
+      @return $box-shadow;
+    } @else {
+      $box-shadow: #{'0 #{$ambientY}px #{$blur}px rgba(0, 0, 0, #{$ambientAlpha})'},
+            #{'0 #{$directY}px #{$blur}px rgba(0, 0, 0, #{$directAlpha})'};
+      @return $box-shadow;
     }
 }
