(improvement) allow the list item to have varying height (improvement) do not add position to the ripple container, let the user know the ripple container has to be relative

--- a/src/themes/material/extends/_list.scss
+++ b/src/themes/material/extends/_list.scss
@@ -34,8 +34,8 @@
     flex-flow: column wrap;
     justify-content: center;
     padding: $list-item-padding;
-    height: $list-item-height;
-    line-height: $list-item-line-height;
+    min-height: $list-item-height;
+    // line-height: $list-item-line-height;
     font-size: $list-item-font-size;
     color: $list-item-color;
     background-color: $list-item-background;
