--- a/src/themes/material/extends/_badges.scss
+++ b/src/themes/material/extends/_badges.scss
@@ -7,10 +7,10 @@
     height: 14px;
     line-height: 16px;
     color: #fff;
-    background-color: $badge-background-color;
+    background: $badge-background-color;
     margin-right: -25%;
-    font-size: 12px;                  
-    top: 0;                    
+    font-size: 12px;
+    top: 0;
     right: 0;
     border-radius: 50% 50%;
     padding: 2px;
@@ -19,4 +19,26 @@
 
 %ig-badge--hidden {
     display: none;
+}
+
+
+%badge--info {
+}
+
+
+%circle {
+    stroke-width: 1;
+    stroke: #ffffff;
+}
+
+%circle-warn {
+    @extend %circle;
+    fill: $warn-color;
+}
+
+%badge--icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: lightgray;
 }
