--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -259,6 +259,10 @@ $button-floating-hover-shadow: $elevate-12 !default;
 $button-floating-radius: 50% !default;
 $button-floating-background: $primary-color !default;
 
+// Icon Buttons
+$button-icon-hover-background: rgba(240, 240, 240, .5);
+$button-icon-focus-background: rgba(209, 209, 209, .5);
+
 /* 9. Fonts
    ========================================================================== */
 $titillium-font-path: '../dist/fonts/titillium/' !default;
