--- a/src/themes/material/extends/_list.scss
+++ b/src/themes/material/extends/_list.scss
@@ -18,6 +18,8 @@
 }
 
 %ig-list-header {
+    display: flex;
+    align-items: center;
     color: $list-header-color;
     background-color: $list-header-background;
     font-size: $list-header-font-size;
@@ -35,7 +37,6 @@
     justify-content: center;
     padding: $list-item-padding;
     min-height: $list-item-height;
-    // line-height: $list-item-line-height;
     font-size: $list-item-font-size;
     color: $list-item-color;
     background-color: $list-item-background;
