--- a/src/themes/material/modules/_buttons.scss
+++ b/src/themes/material/modules/_buttons.scss
@@ -26,6 +26,10 @@
     @extend %button-icon;
   }
 
+  @include m(navbar){
+    @extend %button-navbar;
+  }
+
   @include m(disabled) {
     @extend %button-disabled;
   }
