--- a/src/themes/material/extends/_ripple.scss
+++ b/src/themes/material/extends/_ripple.scss
@@ -14,9 +14,9 @@
     transform: scale(0);
     pointer-events: none;
     overflow: inherit;
+    transform: translate3d(0,0,0);
 }
 
 %ig-ripple-wrapper {
-    // position: relative;
     overflow: hidden;
 }
