(fix) titillium font path

--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -265,7 +265,7 @@ $button-icon-focus-background: rgba(209, 209, 209, .5);
 
 /* 9. Fonts
    ========================================================================== */
-$titillium-font-path: '../dist/fonts/titillium/' !default;
+$titillium-font-path: 'fonts/titillium/' !default;
 
 /* 10. Forms
    ========================================================================== */
