--- a/src/themes/material/extends/_inputs.scss
+++ b/src/themes/material/extends/_inputs.scss
@@ -95,7 +95,28 @@
 }
 
 %ig-search-input {
-    padding: 12px;
+    padding: 12px 12px 12px 64px;
     border-bottom: none;
     box-shadow: $elevate-2;
+    font-size: em(16px);
+}
+
+%ig-input-clear,
+%ig-search-label {
+    max-height: 100%;
+    padding: 12px 16px;
+    color: #484848;
+}
+
+%ig-input-clear {
+    position: absolute;
+    visibility: visible;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+}
+
+%ig-input-clear--hidden {
+    visibility: hidden;
+    pointer-events: none;
 }
