(improvement) remove yellow text background from autofill inputs

--- a/src/themes/material/modules/_inputs.scss
+++ b/src/themes/material/modules/_inputs.scss
@@ -1,3 +1,9 @@
+
+// Global for all inputs
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
 @include b(ig-form-group) {
 
 	@extend %ig-input-display;
