--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   Zero Blocks Variables
+   Ignite UI JS Blocks Variables
    ========================================================================== */
 /**
  * Table of Contents:
