(fix) don't set fixed height to the checkbox label

--- a/src/themes/material/extends/_checkbox.scss
+++ b/src/themes/material/extends/_checkbox.scss
@@ -2,7 +2,7 @@
     display: inline-block;
     position: relative;
     cursor: pointer;
-    height: $checkbox-height;
+    min-height: $checkbox-height;
     line-height: $checkbox-height;
     font-size: $input-font-size;
     color: $input-color;
