--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -206,8 +206,14 @@ $elevate-24: 0px 11px 15px -7px rgba(0, 0, 0, 0.2),
 
 /* 2. Badges
    ========================================================================== */
-
-$badge-background-color: $secondary-color !default;
+$badge-width: 22px;
+$badge-height: $badge-width;
+$badge-bg-color-default: $secondary-color !default;
+$badge-border: 2px solid $white;
+$badge-border-color: $white;
+$badge-border-radius: 50% 50%;
+$badge-font-size: em(10px);
+$badge-font-weight: 600;
 
 /* 3. Buttons
    ========================================================================== */
