--- a/src/themes/material/extends/_badges.scss
+++ b/src/themes/material/extends/_badges.scss
@@ -1,51 +1,46 @@
-%ig-badge-display {
-    display: flex;
+%igx-badge-display {
     position: absolute;
-    justify-content: center;
-    align-items: center;
-    min-width: 14px;
-    height: 14px;
-    line-height: 16px;
-    color: #fff;
-    background: $badge-background-color;
-    margin-right: -25%;
-    font-size: 12px;
-    top: 0;
+    bottom: 0;
     right: 0;
-    border-radius: 50% 50%;
-    padding: 2px;
-    box-shadow: 0px 1px 2px 0px rgba(72, 72, 72, 0.50);
 }
 
-%ig-badge--hidden {
-    display: none;
-}
-
-
-%badge--info {
-}
-
-
-%circle {
-    stroke-width: 1;
-    stroke: #ffffff;
-}
-
-%text {
-    fill: white;
-    font-size: 9;
-    font-family: monospace;
-    text-anchor: middle;
-}
-
-%circle-warn {
-    @extend %circle;
-    fill: $warn-color;
-}
-
-%badge--icon {
+%igx-badge--default {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: lightgray;
+    min-width: $badge-width;
+    height: $badge-height;
+    font-size: $badge-font-size;
+    font-weight: $badge-font-weight;
+    color: $badge-border-color;
+    background-color: $badge-bg-color-default;
+    border: $badge-border;
+    border-radius: $badge-border-radius;
+    line-height: 0;
+    padding: 2px;
+    overflow: hidden;
+    box-shadow: $elevate-1;
+    i {
+        font-size: em(12px, 10px);
+    }
+}
+
+%igx-circle--success {
+    background-color: $success-color;
+}
+
+%igx-badge--info {
+    background-color: $primary-color;;
+}
+
+%igx-circle--warn {
+    background-color: $warn-color;
+}
+
+%igx-circle--error {
+    background-color: $error-color;
+}
+
+%igx-badge--hidden {
+    visibility: hidden;
 }
