--- a/src/themes/material/modules/_badges.scss
+++ b/src/themes/material/modules/_badges.scss
@@ -1,40 +1,31 @@
 @include b(ig-badge){
-    // @extend %ig-badge-display;
+    @extend %igx-badge-display;
+
     @include e(circle) {
-        stroke-width: 2;
-    }
-    @include e(text) {
-    }
-
-    @include m(default) {
-        // @extend %ig-badge-display !optional;
-        @extend %badge--default !optional;
-    }
-
-    @include m(info) {
-        // @extend %ig-badge-display;
-        @extend %badge--info !optional;
-        @include e(circle) {
-            fill: blue;
+        @extend %igx-badge--default;
+        
+        @include m(info) {
+            @extend %igx-badge--info;
         }
-    }
 
-    @include m(successsmall) {
-        // @extend %ig-badge-display;
-        @extend %badge--success !optional;
-    }
+        @include m(icon) {
+            @extend %igx-badge--default;
+        }
 
-    @include m(warning) {
-        // @extend %ig-badge-display;
-        @extend %badge--warning !optional;
-    }
+        @include m(success) {
+            @extend %igx-circle--success;
+        }
 
-    @include m(error) {
-        // @extend %ig-badge-display;
-        @extend %badge--error !optional;
-    }
+        @include m(warning) {
+            @extend %igx-circle--warn;
+        }
 
-    @include m(hidden) {
-        @extend %ig-badge--hidden;
+        @include m(error) {
+            @extend %igx-circle--error;
+        }
+
+        @include m(hidden) {
+            @extend %igx-badge--hidden;
+        }
     }
 }
