--- a/src/themes/material/extends/_avatar.scss
+++ b/src/themes/material/extends/_avatar.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    margin: 3px;
 }
 
 %igx-avatar--rounded {
@@ -10,18 +11,18 @@
 }
 
 %igx-avatar--small {
-    width: em(42px, 16px);
-    height: em(42px, 16px);
+    width: em(46px, 16px);
+    height: em(46px, 16px);
 }
 
 %igx-avatar--medium {
-    width: em(65px, 16px);
-    height: em(65px, 16px);
+    width: em(68px, 16px);
+    height: em(68px, 16px);
 }
 
 %igx-avatar--large {
-    width: em(82px, 16px);
-    height: em(82px, 16px);
+    width: em(86px, 16px);
+    height: em(86px, 16px);
 }
 
 %igx-avatar--icon {
