(improve) remove margin on avatar

--- a/src/themes/material/modules/_badges.scss
+++ b/src/themes/material/modules/_badges.scss
@@ -4,6 +4,7 @@
     @include e(circle) {
         @extend %igx-badge--default;
         @extend %igx-badge--circle;
+        // @extend %igx-badge--scale-in;
 
         @include e(value, true) {
             @extend %igx-badge-value;
