--- a/src/themes/material/extends/_badges.scss
+++ b/src/themes/material/extends/_badges.scss
@@ -1,7 +1,7 @@
 %igx-badge-display {
     position: absolute;
-    bottom: -3px;
-    right: -3px;
+    bottom: -5px;
+    right: -5px;
     max-width: 100%;
     text-overflow: ellipsis;
 }
@@ -25,8 +25,6 @@
         font-size: em(12px, 10px);
         font-weight: $badge-font-weight;
     }
-    // transform: scale(0);
-    // animation: scale-in .25s ease-in forwards;
 }
 
 %igx-badge-value {
@@ -58,8 +56,12 @@
     visibility: hidden;
 }
 
+%igx-badge--scale-in {
+    animation: scale-in .25s ease-in backwards;
+}
+
 @keyframes scale-in {
-    100% {
-        transform: scale(1);
+    0% {
+        transform: scale(0);
     }
 }
