initial changes and configuration of Js blocks front page

--- a/demos/app.component.html
+++ b/demos/app.component.html
@@ -1,5 +1,5 @@
-<div class="row" style="margin-top: 15em">
-    <div class="whiteContainer col-sm-12 col-lg-9">
+<div style="margin-top: 15em">
+    <div class="whiteContainer row col-sm-12 col-lg-9">
         <div style="width: 50%">
             <span class="midContentHeading">One by one</span><br>
             <span class="midContent">Explore the components and directives we’re working on</span><br><br>
@@ -32,11 +32,11 @@
         <router-outlet></router-outlet>
     </div>
 </div>
-<div class="row" style="margin-top: 5em; margin-bottom: 5em;">
+<div style="margin-top: 5em; margin-bottom: 5em;">
     <div class="col-sm-12 col-lg-9 codebox">             
         <div class="tabs">
             <div>
-                <span style="font-weigh: bold;">Code Sample</span>
+                <span style="font-weight: bold;">Code Sample</span>
                 <span style="float: right;" (click)="changeContent($event)">HTML</span>
                 <span style="float: right; margin-right: 20px" (click)="changeContent($event)">TS</span>
             </div>
