--- a/demos/app.component.html
+++ b/demos/app.component.html
@@ -1,13 +1,13 @@
-<div style="margin-top: 15em">
-    <div class="whiteContainer row col-sm-12 col-lg-9">
-        <div style="width: 50%">
+<div class="samples-container">
+    <div class="whiteContainer row col-sm-push-1 col-sm-11 col-lg-push-2 col-lg-10">
+        <div class="text-content">
             <span class="midContentHeading">One by one</span><br>
             <span class="midContent">Explore the components and directives we’re working on</span><br><br>
-            <div style="width: 50%; float: left;">
+            <div class="component-links">
                 <span class="titles">components</span><br>
                 <nav>
                     <ul class="nav-list">
-                        <li><a><span igButton routerLink="/switch">Switch</span></a></li> 
+                        <li><a><span igButton routerLink="/inputs">Switch</span></a></li> 
                         <li><a><span igButton routerLink="/carousel">Carousel</span></a></li> 
                         <li><a><span igButton routerLink="/tabbar">TabBar</span></a></li> 
                         <li><a><span igButton routerLink="/list">List</span></a></li> 
@@ -17,7 +17,7 @@
                     </ul>
                 </nav>
             </div>
-            <div style="width: 50%; float: right;">
+            <div class="directive-links">
                 <span class="titles">directives</span><br>
                 <nav>
                     <ul class="nav-list">
@@ -32,18 +32,17 @@
         <router-outlet></router-outlet>
     </div>
 </div>
-<div style="margin-top: 5em; margin-bottom: 5em;">
-    <div class="col-sm-12 col-lg-9 codebox">             
+<div class="code-container">
+    <div class="col-sm-10 col-sm-push-1 col-lg-8 codebox">             
         <div class="tabs">
-            <div>
-                <span style="font-weight: bold;">Code Sample</span>
-                <span style="float: right;" (click)="changeContent($event)">HTML</span>
-                <span style="float: right; margin-right: 20px" (click)="changeContent($event)">TS</span>
+            <div class="header">
+                <span class="title">Code Sample</span>
+                <span class="html" (click)="changeContent($event)">HTML</span>
+                <span class="ts" (click)="changeContent($event)">TS</span>
             </div>
-            <div style="margin-top:20px;">
-                <pre style="border: 0px; background-color: #ffffff;">
-                    <code class="language-html">
-                    </code>
+            <div class="content">
+                <pre>
+                    <code class="language-html"></code>
                 </pre>
             </div>
         </div>
