--- a/src/themes/material/modules/_badges.scss
+++ b/src/themes/material/modules/_badges.scss
@@ -4,7 +4,6 @@
     @include e(circle) {
         @extend %igx-badge--default;
         @extend %igx-badge--circle;
-        // @extend %igx-badge--scale-in;
 
         @include e(value, true) {
             @extend %igx-badge-value;
@@ -26,6 +25,26 @@
             @extend %igx-circle--error;
         }
     }
+    @include m(top-left) {
+        @extend %igx-badge-display;
+        @extend %igx-badge-pos-tl;
+    }
+
+    @include m(bottom-left) {
+        @extend %igx-badge-display;
+        @extend %igx-badge-pos-bl;
+    }
+
+    @include m(top-right) {
+        @extend %igx-badge-display;
+        @extend %igx-badge-pos-tr;
+    }
+
+    @include m(bottom-right) {
+        @extend %igx-badge-display;
+        @extend %igx-badge-pos-br;
+    }
+
     @include m(hidden) {
         @extend %igx-badge--hidden;
     }
